--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ html{
     .categories {
         display: grid;
         grid-template-columns: repeat(6,1fr);
+        margin: 0px 2rem;
     }
 }
 
@@ -91,14 +92,84 @@ html{
 a h4{
     margin: 0.5rem 0px;
 }
-.socialmedia a,p{
-    text-align: center;
+
+#youtube > p{
     margin: 0px;
+    text-align: center;
 }
-#inspiredby{
-    text-align: left;
+
+#twitter > p{
+    margin: 0px;
+    text-align: center;
+}
+
+#linkedin > p{
+    margin: 0px;
+    text-align: center;
 }
 
 hr{
     opacity: 0.3;
+}
+
+.community h1{
+    font-size: 2rem;
+    margin-left: 3rem;
+}
+
+.visit-our-community h3{
+    font-size: 2rem;
+    color: #073042;
+
+}
+.visit-our-community p{
+    font-size: 0.8rem;
+}
+
+.visit-our-community a{
+    text-decoration: none;
+    color: #073042;
+    font-weight: bold;
+    font-size: 0.9rem;
+}
+
+.visit-our-community {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 2rem;
+    margin: 4rem 3rem;
+}
+.community-container{
+    padding: 2rem;
+    background-color: #eff7cf;
+}
+.community-container:hover{
+    cursor: pointer;
+    box-shadow: 1px 4px 5px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.2s ease-in;
+}
+
+.community-container:hover a{
+    text-decoration: underline;
+    color: black;
+}
+.community-container a{
+    padding: 1rem 0px;
+}
+
+.community-container p{
+    margin-bottom: 1rem;
+}
+
+.community-container img{
+    width: 3rem;
+    height: 3rem;
+}
+.learnmore-container {
+    position: relative;
+}
+.learnmore-container div{
+    background-color: white;
+    width: 100%;
+    height: 100%;
 }
