--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 html{
     font-family: 'Montserrat', sans-serif;
 }
-
+body{
+    margin: 0;
+}
 .category-items-list{
     list-style: none;
     padding: 0px;
@@ -133,12 +135,23 @@ hr{
     font-size: 0.9rem;
 }
 
-.visit-our-community {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    column-gap: 2rem;
-    margin: 4rem 3rem;
+@media (orientation:landscape) {
+    .visit-our-community {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        column-gap: 2rem;
+        margin: 4rem 3rem;
+    }
 }
+
+@media (orientation:portrait) {
+    .visit-our-community {
+        display: grid;
+        row-gap: 2rem;
+        margin:0px 1rem
+    }
+}
+
 .community-container{
     padding: 2rem;
     background-color: #eff7cf;
@@ -172,4 +185,90 @@ hr{
     background-color: white;
     width: 100%;
     height: 100%;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: 10px auto 1fr 10px;
+    /* padding: 0px 1rem; */
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 4rem;
+    right: 0;
+    background-color: white;
+    box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+nav ul{
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2px;
+}
+nav ul li{
+    padding: 1rem;
+}
+.title-image img{
+    height: 32px;
+}
+.title-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.nav-right-container {
+    display: flex;
+    align-items: center;
+}
+
+.nav-right-container a{
+    text-decoration: none;
+    margin-left: 1rem;
+}
+.nav-main-container {
+    display: flex;
+    justify-content: space-between;
+}
+.nav-main-container ul li:hover{
+    border-bottom: 3px solid rgb(99, 99, 99);
+    cursor: pointer;
+}
+.main-text-image-container{
+    height: 30rem;
+    background-color: #073042;
+    margin-top: 4rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.main-text-image-container h1 {
+    font-size: 3rem;
+}
+.main-text-image-container-left {
+    color: white;
+    padding: 0px 4rem;
+}
+.main-text-image-container-right{
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.main-text-image-container-left #search-box{
+    width: 90%;
+    padding: 0.5rem;
+    padding-left: 30px;
+    outline: none;
+    margin-top: 3rem;
+    /* margin-right: 20px !important; */
+}
+.search-icon-container{
+    position: relative;
+}
+.search-icon-container img{
+    position: absolute;
+    top: 50px;
 }
