--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@ hr{
         grid-template-columns: repeat(3,1fr);
         column-gap: 2rem;
         margin: 4rem 3rem;
+        row-gap: 1rem;
     }
 }
 
@@ -189,11 +190,11 @@ hr{
 
 nav {
     display: grid;
-    grid-template-columns: 10px auto 1fr 10px;
-    /* padding: 0px 1rem; */
+    grid-template-columns: 60px auto 1fr 10px;
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 1;
     left: 0;
     height: 4rem;
     right: 0;
@@ -207,6 +208,7 @@ nav ul{
     align-items: center;
     justify-content: space-between;
     margin: 2px;
+    padding-inline-start: 0px;
 }
 nav ul li{
     padding: 1rem;
